--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
       url: https://github.com/tomasaquiles-ca/mrz_parser.git
       ref: chore/deps-update
   path_provider: ^2.0.15
+  intl: ^0.18.1
   # image: ^4.0.17
 
 dev_dependencies:
