--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
       ref: chore/deps-update
   path_provider: ^2.0.15
   intl: ^0.18.1
+  google_mlkit_text_recognition: ^0.9.0
   # image: ^4.0.17
 
 dev_dependencies:
